--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     "action": {
         "default_popup": "popup.html"
     },
+    "options_page": "options.html",
     "commands": {
         "open-editor": {
             "suggested_key": {
