--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,7 @@
                 "content.js"
             ],
             "css": [
-                "styles.css"
+                "content.css"
             ],
             "run_at": "document_end"
         }
