--- a/manifest.json
+++ b/manifest.json
@@ -40,11 +40,11 @@
                 "<all_urls>"
             ],
             "js": [
-                "content.js"
+                "content.js",
+                "fontawesome.min.js"
             ],
             "css": [
-                "content.css",
-                "fontawesome.min.css"
+                "content.css"
             ],
             "run_at": "document_end"
         }
